--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,4 +73,4 @@ jobs:
         with:
           allowUpdates: true
           omitBodyDuringUpdate: true
-          artifacts: "../${{ github.event.repository.name }}-${{ env.RELEASE_VERSION }}.zip"
+          artifacts: "${{ github.event.repository.name }}-${{ env.RELEASE_VERSION }}.zip"
